--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,15 @@ references:
     run:
       name: "All Commands"
       command: |
-        mkdir -p bin
-        curl -Lso bin/shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
-        chmod +x bin/shellcheck
         go get -t -v ./...
         PATH=$PATH:$PWD/bin go test -v ./...
         go build
         go vet
         cd example
         go build .
-        shellcheck -e SC2148,SC2154 <(./example _zsh_completion)
+        curl -Lso shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
+        chmod +x shellcheck
+        ./shellcheck -e SC2148,SC2154 <(./example _zsh_completion)
 
 jobs:
   go-current:
