updated circleci, readded README
partly updated README content

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 references:
   workspace: &workspace
-    /go/src/github.com/rsteube/cobra-zsh-gen
+    /go/src/github.com/rsteube/carapace
 
   run_tests: &run_tests
     run:
@@ -16,7 +16,8 @@ references:
         go build .
         curl -Lso shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
         chmod +x shellcheck
-        ./shellcheck -e SC2148,SC2154 <(./example _zsh_completion)
+        ./shellcheck -e SC2148,SC2154 <(./example _carapace zsh)
+        ./shellcheck -e SC2148,SC2154 <(./example _carapace fish)
 
 jobs:
   go-current:
