--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ references:
         go build .
         curl -Lso shellcheck https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
         chmod +x shellcheck
-        ./shellcheck -e SC2148,SC2154 <(./example _carapace zsh)
+        ./shellcheck -e SC2046,SC2207 <(./example _carapace bash)
         ./shellcheck -e SC1064,SC1072,SC1073 <(./example _carapace fish)
+        ./shellcheck -e SC2148,SC2154 <(./example _carapace zsh)
 
 jobs:
   go-current:
