--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,30 @@
-version: '2'
+version: '3'
 
 services:
+  bash:
+    build:
+      context: .
+      dockerfile: Dockerfile.bash
+    volumes:
+      - '.:/carapace/'
+
+  fish:
+    build:
+      context: .
+      dockerfile: Dockerfile.fish
+    volumes:
+      - '.:/carapace/'
+
   powershell:
-    image: mcr.microsoft.com/powershell
-    working_dir: /carapace/example
+    build:
+      context: .
+      dockerfile: Dockerfile.powershell
+    volumes:
+      - '.:/carapace/'
+
+  zsh:
+    build:
+      context: .
+      dockerfile: Dockerfile.zsh
     volumes:
       - '.:/carapace/'
