--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,8 @@ jobs:
   go-current:
     docker:
       - image: circleci/golang:1.12
+        environment:
+          GO111MODULE: "on"
     working_directory: *workspace
     steps:
       - checkout
@@ -45,6 +47,8 @@ jobs:
   go-previous:
     docker:
       - image: circleci/golang:1.11
+        environment:
+          GO111MODULE: "on"
     working_directory: *workspace
     steps:
       - checkout
