--- a/Dockerfile.oil
+++ b/Dockerfile.oil
@@ -1,7 +1,7 @@
 FROM golang
 
 RUN apt-get update \
- && apt install -y build-essential libreadline-dev
+ && apt install -y build-essential libreadline-dev bash-completion
 
 RUN curl https://www.oilshell.org/download/oil-0.8.0.tar.gz | tar -xvz \
  && cd oil-*/ \
@@ -12,6 +12,7 @@ RUN curl https://www.oilshell.org/download/oil-0.8.0.tar.gz | tar -xvz \
 RUN mkdir -p ~/.config/oil \
  && echo "\n\
 PS1=$'\e[0;36mcarapace \e[0m'\n\
+source /usr/share/bash-completion/bash_completion \n\
 source <(example _carapace bash)" \
        > ~/.config/oil/oshrc
 
