elvish: use eval for callback

--- a/Dockerfile.elvish
+++ b/Dockerfile.elvish
@@ -1,6 +1,6 @@
 FROM golang
 
-RUN curl https://dl.elv.sh/linux-amd64/elvish-v0.14.1.tar.gz | tar -xvz \
+RUN curl https://dl.elv.sh/linux-amd64/elvish-HEAD.tar.gz | tar -xvz \
  && mv elvish-* /usr/local/bin/elvish
 
 ENV PS1=$'%{\e[0;36m%}carapace %{\e[0m%}'
