--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,11 +58,11 @@ jobs:
           name: "install mdbook"
           command: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.4/mdbook-v0.4.4-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook
       - run:
-          name: "install mdbook"
+          name: "install mdbook-linkcheck"
           command: curl -L "https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/download/v0.7.0/mdbook-linkcheck-v0.7.0-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook-linkcheck
       - run:
           name: "build docs"
-          command: ./mdbook build docs
+          command: PATH=$PATH:$(pwd) mdbook build docs
       - run:
           name: "push gh-pages"
           command: |
