--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: "push gh-pages"
           command: |
-            cd docs/book/
+            cd docs/book/html/
             git init
             git config user.name rsteube
             git config user.email rsteube@users.noreply.github.com
