--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,14 +59,15 @@ jobs:
           command: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.4/mdbook-v0.4.4-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook
       - run:
           name: "install mdbook-linkcheck"
-          command: curl -L "https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/download/v0.6.0/mdbook-linkcheck-v0.6.0-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook-linkcheck
+          command: curl -L "https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/download/v0.7.0/mdbook-linkcheck-v0.7.0-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook-linkcheck
       - run:
           name: "build docs"
           command: PATH=$PATH:$(pwd) mdbook build docs
       - run:
           name: "push gh-pages"
           command: |
-            cd docs/book/html/
+            sed -i 's/\[output.linkcheck\]/#[output.linkcheck]/' docs/book.toml
+            cd docs/book/
             git init
             git config user.name rsteube
             git config user.email rsteube@users.noreply.github.com
