--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,11 +62,12 @@ jobs:
           command: curl -L "https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/download/v0.7.0/mdbook-linkcheck-v0.7.0-x86_64-unknown-linux-gnu.tar.gz" | tar -xvz mdbook-linkcheck
       - run:
           name: "build docs"
-          command: PATH=$PATH:$(pwd) mdbook build docs
+          command: |
+            sed -i 's/\[output.linkcheck\]/#[output.linkcheck]/' docs/book.toml
+            PATH=$PATH:$(pwd) mdbook build docs
       - run:
           name: "push gh-pages"
           command: |
-            sed -i 's/\[output.linkcheck\]/#[output.linkcheck]/' docs/book.toml
             cd docs/book/
             git init
             git config user.name rsteube
