oil: use completion-display minimal
- default currently has drawing issues when content exceeds terminal
width: https://github.com/oilshell/oil/issues/795

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   
   oil:
     <<: *base
-    command: osh
+    command: osh --completion-display minimal
 
   powershell:
     <<: *base
