docker: add tcsh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,10 @@ services:
     <<: *base
     command: pwsh
   
+  tcsh:
+    <<: *base
+    command: tcsh
+
   xonsh: 
     <<: *base
     command: xonsh
