--- a/docs/book.toml
+++ b/docs/book.toml
@@ -9,5 +9,7 @@ title = "carapace"
 default-theme = "Mocha"
 additional-css = ["asciinema/asciinema-player.css", "./theme/catppuccin.css", "./theme/catppuccin-highlight.css"]
 additional-js = ["asciinema/asciinema-player.min.js", "asciinema/load.js"]
+git-repository-url = "https://github.com/rsteube/carapace"
+edit-url-template = "https://github.com/rsteube/carapace/edit/master/docs/{path}"
 
 #[output.linkcheck]
