--- a/docs/book.toml
+++ b/docs/book.toml
@@ -12,4 +12,5 @@ additional-js = ["asciinema/asciinema-player.min.js", "asciinema/load.js"]
 git-repository-url = "https://github.com/rsteube/carapace"
 edit-url-template = "https://github.com/rsteube/carapace/edit/master/docs/{path}"
 
-#[output.linkcheck]
+[output.linkcheck]
+follow-web-links = false
