standalone: fix suppression of help flag

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         run: go generate ./...
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./... ./example-nonposix/...
 
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
