--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,13 +23,16 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: '1.20'
       
       - name: Generate
         run: go generate ./...
 
       - name: Test
-        run: go test -v -coverprofile=profile.cov ./... ./example-nonposix/...
+        run: mkdir .cover && CARAPACE_COVERDIR="$(pwd)/.cover" go test -v -coverprofile=unit.cov ./... ./example-nonposix/...
+
+      - name: Merge coverage
+        run: go tool covdata textfmt -i .cover/ -o integration.cov && gocovmerge unit.cov integration.cov > profile.cov
 
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
