--- a/docs/book.toml
+++ b/docs/book.toml
@@ -13,4 +13,4 @@ git-repository-url = "https://github.com/rsteube/carapace"
 edit-url-template = "https://github.com/rsteube/carapace/edit/master/docs/{path}"
 
 [output.linkcheck]
-follow-web-links = false
+follow-web-links = true
