--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
         run: mkdir .cover && CARAPACE_COVERDIR="$(pwd)/.cover" go test -v -coverprofile=unit.cov ./... ./example-nonposix/...
 
       - name: Merge coverage
-        run: go tool covdata textfmt -i .cover/ -o integration.cov && gocovmerge unit.cov integration.cov > profile.cov
+        run: go tool covdata textfmt -i .cover/ -o integration.cov && gocovmerge unit.cov integration.cov | sed '/^github.com\/rsteube\/carapace\/third_party/d' > profile.cov
 
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
