--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,17 +29,30 @@ jobs:
         run: go generate ./...
 
       - name: Test
-        run: mkdir .cover && CARAPACE_COVERDIR="$(pwd)/.cover" go test -v -coverprofile=unit.cov ./... ./example-nonposix/...
+        run: mkdir .cover && CARAPACE_COVERDIR="$(pwd)/.cover" go test -v -coverpkg ./... -coverprofile=unit.cov ./... ./example-nonposix/...
 
       - name: Merge coverage
-        run: go tool covdata textfmt -i .cover/ -o integration.cov && gocovmerge unit.cov integration.cov | sed '/^github.com\/rsteube\/carapace\/third_party/d' > profile.cov
+        run: go tool covdata textfmt -i .cover/ -o integration.cov 
+
+      - name: Filter coverage
+        run: sed -i '/^github.com\/rsteube\/carapace\/third_party/d' unit.cov integration.cov
 
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
 
       - uses: shogo82148/actions-goveralls@v1
         with:
-          path-to-profile: profile.cov
+          path-to-profile: unit.cov
+          parallel: true
+
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: integration.cov
+          parallel: true
+
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          parallel-finished: true
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
