--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -14,6 +14,7 @@ jobs:
 
       - uses: actions/cache@v3
         with:
+          key: linkcheck
           path: docs/book/linkcheck/
 
       - name: "build docs"
