--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Test
         run: mkdir .cover && CARAPACE_COVERDIR="$(pwd)/.cover" go test -v -coverpkg ./... -coverprofile=unit.cov ./... ./example-nonposix/...
 
+      - name: Bench
+        run: go test -bench ./...
+
       - name: Convert coverage
         run: go tool covdata textfmt -i .cover/ -o integration.cov 
 
