--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ caraparse/caraparse
 docs/book
 example/cmd/_test_files/*.txt
 example/example
+example-nonposix/example-nonposix
 integration.cov
 unit.cov
 .vscode
