--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,9 +21,9 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: '1.20'
       
       - name: Generate
         run: go generate ./...
@@ -42,6 +42,20 @@ jobs:
 
       - name: "Check formatting"
         run: '[ "$(gofmt -d -s . | tee -a /dev/stderr)" = "" ]'
+
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: unit.cov
+          parallel: true
+
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: integration.cov
+          parallel: true
+
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          parallel-finished: true
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
