--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    container: ghcr.io/rsteube/carapace
+    container: ghcr.io/carapace-sh/carapace
     steps:
       - name: shallow clone
         uses: actions/checkout@v4
